// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`poolswap page should be able to input values 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "rgba(243, 244, 246, 1)",
    }
  }
>
  <View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "600",
          },
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "flexGrow": 1,
            "fontSize": 14,
            "fontWeight": "700",
            "lineHeight": 20,
            "marginTop": 16,
            "paddingLeft": 16,
            "paddingTop": 16,
          },
        ]
      }
    >
      From
    </Text>
    <View
      style={
        Object {
          "borderBottomColor": "rgba(243, 244, 246, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(243, 244, 246, 1)",
          "borderRightColor": "rgba(243, 244, 246, 1)",
          "borderTopColor": "rgba(243, 244, 246, 1)",
          "flexDirection": "row",
          "width": "100%",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        keyboardType="numeric"
        onBlur={[Function]}
        onChangeText={[Function]}
        placeholder="Enter an amount"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "flexGrow": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
            },
          ]
        }
        testID="input_amount_0"
        underlineColorAndroid="transparent"
        value="1"
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "flexDirection": "row",
            "paddingRight": 16,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={32}
          bbWidth={32}
          focusable={false}
          height={32}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 32,
                "width": 32,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={32}
        >
          <RNSVGGroup>
            <RNSVGCircle
              cx={16}
              cy={16}
              fill={4294901935}
              propList={
                Array [
                  "fill",
                ]
              }
              r={16}
            />
            <RNSVGPath
              d="M18.217 23.454V8.546c3.21.958 5.555 3.937 5.555 7.454s-2.346 6.496-5.555 7.454M15.994 6v8.428l-1.269-1.27-.162-3.167 1.324-3.985a9.952 9.952 0 00-2.454.338l-.64 1.926-1.816-.91a10.03 10.03 0 00-1.974 1.497l3.363 1.685.098 1.928-1.927-.099L8.85 9.01a10.035 10.035 0 00-1.497 1.973l.911 1.816-1.927.64A9.978 9.978 0 006 15.892l3.986-1.324 3.168.162 1.27 1.27-1.27 1.27-3.168.162L6 16.108c.009.849.13 1.669.338 2.454l1.927.64-.911 1.816c.418.719.92 1.383 1.497 1.973l1.686-3.362 1.927-.099-.098 1.928-3.363 1.685a10.04 10.04 0 001.974 1.498l1.815-.911.64 1.926a9.94 9.94 0 002.455.338l-1.324-3.985.162-3.168 1.27-1.27V26c5.522 0 10-4.477 10-10s-4.478-10-10-10"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "marginLeft": 8,
              },
            ]
          }
        >
          DFI
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "flexDirection": "row",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexGrow": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Balance: 
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "rgba(107, 114, 128, 1)",
              },
            ]
          }
        >
          23 DFI
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="max_button_token_a"
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Array [
                Object {
                  "color": "#ff00af",
                },
                Object {
                  "fontWeight": "700",
                },
              ],
            ]
          }
        >
          MAX
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginTop": 16,
          "opacity": 1,
        }
      }
      testID="swap_button"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#ff00af",
              "fontSize": 28,
            },
            undefined,
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "600",
          },
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "flexGrow": 1,
            "fontSize": 14,
            "fontWeight": "700",
            "lineHeight": 20,
            "marginTop": 16,
            "paddingLeft": 16,
            "paddingTop": 16,
          },
        ]
      }
    >
      To
    </Text>
    <View
      style={
        Object {
          "borderBottomColor": "rgba(243, 244, 246, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(243, 244, 246, 1)",
          "borderRightColor": "rgba(243, 244, 246, 1)",
          "borderTopColor": "rgba(243, 244, 246, 1)",
          "flexDirection": "row",
          "width": "100%",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        keyboardType="numeric"
        onBlur={[Function]}
        onChangeText={[Function]}
        placeholder="Enter an amount"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "flexGrow": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
            },
          ]
        }
        testID="input_amount_1"
        underlineColorAndroid="transparent"
        value="2"
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "flexDirection": "row",
            "paddingRight": 16,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={32}
          bbWidth={32}
          focusable={false}
          height={32}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 32,
                "width": 32,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={32}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M31.521 19.87c-2.137 8.572-10.82 13.788-19.393 11.651C3.558 29.384-1.659 20.702.479 12.131 2.616 3.56 11.298-1.659 19.87.48c8.573 2.137 13.79 10.82 11.652 19.392z"
              fill={4294415130}
              propList={
                Array [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M22.96 14.04c.313-2.101-1.276-3.23-3.448-3.985l.705-2.846-1.72-.432-.686 2.772a67.899 67.899 0 00-1.379-.327l.691-2.79L15.404 6l-.705 2.846a57.2 57.2 0 01-1.099-.26l.002-.01-2.372-.596-.458 1.85s1.277.296 1.25.314c.696.175.822.64.801 1.008l-.802 3.243c.048.012.11.03.179.057l-.182-.045-1.125 4.543c-.085.213-.302.533-.789.412.018.025-1.25-.315-1.25-.315L8 21.031l2.239.562c.416.105.824.215 1.226.319l-.712 2.88 1.718.431.706-2.849c.469.129.925.247 1.37.359l-.702 2.835 1.72.432.712-2.874c2.934.56 5.14.334 6.068-2.339.748-2.152-.037-3.393-1.58-4.202 1.123-.261 1.97-1.006 2.196-2.545zm-4.012 5.8c-.497 1.961-3.858.901-4.948.635L14.883 17c1.09.267 4.584.796 4.065 2.84zm.991-6.05c-.538 1.993-3.861.98-4.939.732L15.95 11c1.079.248 4.55.712 3.99 2.79z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "marginLeft": 8,
              },
            ]
          }
        >
          BTC
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "flexDirection": "row",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexGrow": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Balance: 
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "rgba(107, 114, 128, 1)",
              },
            ]
          }
        >
          777 BTC
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "borderBottomColor": "rgba(243, 244, 246, 1)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(243, 244, 246, 1)",
            "borderRightColor": "rgba(243, 244, 246, 1)",
            "borderTopColor": "rgba(243, 244, 246, 1)",
            "flexDirection": "row",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Price
        </Text>
        <View
          style={
            Object {
              "flexDirection": "column",
              "flexGrow": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "rgba(107, 114, 128, 1)",
                  "marginLeft": 4,
                  "textAlign": "right",
                },
              ]
            }
          >
            10 DFI per BTC
          </Text>
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "rgba(107, 114, 128, 1)",
                  "marginLeft": 4,
                  "textAlign": "right",
                },
              ]
            }
          >
            0.1 BTC per DFI
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "borderBottomColor": "rgba(243, 244, 246, 1)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(243, 244, 246, 1)",
            "borderRightColor": "rgba(243, 244, 246, 1)",
            "borderTopColor": "rgba(243, 244, 246, 1)",
            "flexDirection": "row",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Estimated to receive
        </Text>
        <View
          style={
            Object {
              "flexDirection": "column",
              "flexGrow": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "rgba(107, 114, 128, 1)",
                  "marginLeft": 4,
                  "textAlign": "right",
                },
              ]
            }
          >
            1 BTC
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "borderBottomColor": "rgba(243, 244, 246, 1)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(243, 244, 246, 1)",
            "borderRightColor": "rgba(243, 244, 246, 1)",
            "borderTopColor": "rgba(243, 244, 246, 1)",
            "flexDirection": "row",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Minimum to receive
        </Text>
        <View
          style={
            Object {
              "flexDirection": "column",
              "flexGrow": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "rgba(107, 114, 128, 1)",
                  "marginLeft": 4,
                  "textAlign": "right",
                },
              ]
            }
          >
            1 BTC
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "borderBottomColor": "rgba(243, 244, 246, 1)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(243, 244, 246, 1)",
            "borderRightColor": "rgba(243, 244, 246, 1)",
            "borderTopColor": "rgba(243, 244, 246, 1)",
            "flexDirection": "row",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Liquidity provider fee
        </Text>
        <View
          style={
            Object {
              "flexDirection": "column",
              "flexGrow": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "rgba(107, 114, 128, 1)",
                  "marginLeft": 4,
                  "textAlign": "right",
                },
              ]
            }
          >
            1 DFI
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#ff00af",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 4,
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
          "color": "#ffffff",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginBottom": 16,
          "marginLeft": 16,
          "marginRight": 16,
          "marginTop": 32,
          "opacity": 1,
          "paddingBottom": 12,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 12,
        }
      }
      testID="button_submit"
    >
      <Text
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontWeight": "700",
            },
          ]
        }
      >
        SWAP
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`poolswap page should be able to swap and submit 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "rgba(243, 244, 246, 1)",
    }
  }
>
  <View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "600",
          },
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "flexGrow": 1,
            "fontSize": 14,
            "fontWeight": "700",
            "lineHeight": 20,
            "marginTop": 16,
            "paddingLeft": 16,
            "paddingTop": 16,
          },
        ]
      }
    >
      From
    </Text>
    <View
      style={
        Object {
          "borderBottomColor": "rgba(243, 244, 246, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(243, 244, 246, 1)",
          "borderRightColor": "rgba(243, 244, 246, 1)",
          "borderTopColor": "rgba(243, 244, 246, 1)",
          "flexDirection": "row",
          "width": "100%",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        keyboardType="numeric"
        onBlur={[Function]}
        onChangeText={[Function]}
        placeholder="Enter an amount"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "flexGrow": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
            },
          ]
        }
        testID="input_amount_1"
        underlineColorAndroid="transparent"
        value="23"
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "flexDirection": "row",
            "paddingRight": 16,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={32}
          bbWidth={32}
          focusable={false}
          height={32}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 32,
                "width": 32,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={32}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M31.521 19.87c-2.137 8.572-10.82 13.788-19.393 11.651C3.558 29.384-1.659 20.702.479 12.131 2.616 3.56 11.298-1.659 19.87.48c8.573 2.137 13.79 10.82 11.652 19.392z"
              fill={4294415130}
              propList={
                Array [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M22.96 14.04c.313-2.101-1.276-3.23-3.448-3.985l.705-2.846-1.72-.432-.686 2.772a67.899 67.899 0 00-1.379-.327l.691-2.79L15.404 6l-.705 2.846a57.2 57.2 0 01-1.099-.26l.002-.01-2.372-.596-.458 1.85s1.277.296 1.25.314c.696.175.822.64.801 1.008l-.802 3.243c.048.012.11.03.179.057l-.182-.045-1.125 4.543c-.085.213-.302.533-.789.412.018.025-1.25-.315-1.25-.315L8 21.031l2.239.562c.416.105.824.215 1.226.319l-.712 2.88 1.718.431.706-2.849c.469.129.925.247 1.37.359l-.702 2.835 1.72.432.712-2.874c2.934.56 5.14.334 6.068-2.339.748-2.152-.037-3.393-1.58-4.202 1.123-.261 1.97-1.006 2.196-2.545zm-4.012 5.8c-.497 1.961-3.858.901-4.948.635L14.883 17c1.09.267 4.584.796 4.065 2.84zm.991-6.05c-.538 1.993-3.861.98-4.939.732L15.95 11c1.079.248 4.55.712 3.99 2.79z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "marginLeft": 8,
              },
            ]
          }
        >
          BTC
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "flexDirection": "row",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexGrow": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Balance: 
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "rgba(107, 114, 128, 1)",
              },
            ]
          }
        >
          777 BTC
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="max_button_token_a"
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Array [
                Object {
                  "color": "#ff00af",
                },
                Object {
                  "fontWeight": "700",
                },
              ],
            ]
          }
        >
          MAX
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginTop": 16,
          "opacity": 1,
        }
      }
      testID="swap_button"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#ff00af",
              "fontSize": 28,
            },
            undefined,
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "600",
          },
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "flexGrow": 1,
            "fontSize": 14,
            "fontWeight": "700",
            "lineHeight": 20,
            "marginTop": 16,
            "paddingLeft": 16,
            "paddingTop": 16,
          },
        ]
      }
    >
      To
    </Text>
    <View
      style={
        Object {
          "borderBottomColor": "rgba(243, 244, 246, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(243, 244, 246, 1)",
          "borderRightColor": "rgba(243, 244, 246, 1)",
          "borderTopColor": "rgba(243, 244, 246, 1)",
          "flexDirection": "row",
          "width": "100%",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        keyboardType="numeric"
        onBlur={[Function]}
        onChangeText={[Function]}
        placeholder="Enter an amount"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "flexGrow": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
            },
          ]
        }
        testID="input_amount_0"
        underlineColorAndroid="transparent"
        value="2"
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "flexDirection": "row",
            "paddingRight": 16,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={32}
          bbWidth={32}
          focusable={false}
          height={32}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 32,
                "width": 32,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={32}
        >
          <RNSVGGroup>
            <RNSVGCircle
              cx={16}
              cy={16}
              fill={4294901935}
              propList={
                Array [
                  "fill",
                ]
              }
              r={16}
            />
            <RNSVGPath
              d="M18.217 23.454V8.546c3.21.958 5.555 3.937 5.555 7.454s-2.346 6.496-5.555 7.454M15.994 6v8.428l-1.269-1.27-.162-3.167 1.324-3.985a9.952 9.952 0 00-2.454.338l-.64 1.926-1.816-.91a10.03 10.03 0 00-1.974 1.497l3.363 1.685.098 1.928-1.927-.099L8.85 9.01a10.035 10.035 0 00-1.497 1.973l.911 1.816-1.927.64A9.978 9.978 0 006 15.892l3.986-1.324 3.168.162 1.27 1.27-1.27 1.27-3.168.162L6 16.108c.009.849.13 1.669.338 2.454l1.927.64-.911 1.816c.418.719.92 1.383 1.497 1.973l1.686-3.362 1.927-.099-.098 1.928-3.363 1.685a10.04 10.04 0 001.974 1.498l1.815-.911.64 1.926a9.94 9.94 0 002.455.338l-1.324-3.985.162-3.168 1.27-1.27V26c5.522 0 10-4.477 10-10s-4.478-10-10-10"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "marginLeft": 8,
              },
            ]
          }
        >
          DFI
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "flexDirection": "row",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexGrow": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Balance: 
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "rgba(107, 114, 128, 1)",
              },
            ]
          }
        >
          23 DFI
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "borderBottomColor": "rgba(243, 244, 246, 1)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(243, 244, 246, 1)",
            "borderRightColor": "rgba(243, 244, 246, 1)",
            "borderTopColor": "rgba(243, 244, 246, 1)",
            "flexDirection": "row",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Price
        </Text>
        <View
          style={
            Object {
              "flexDirection": "column",
              "flexGrow": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "rgba(107, 114, 128, 1)",
                  "marginLeft": 4,
                  "textAlign": "right",
                },
              ]
            }
          >
            0.1 BTC per DFI
          </Text>
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "rgba(107, 114, 128, 1)",
                  "marginLeft": 4,
                  "textAlign": "right",
                },
              ]
            }
          >
            10 DFI per BTC
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "borderBottomColor": "rgba(243, 244, 246, 1)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(243, 244, 246, 1)",
            "borderRightColor": "rgba(243, 244, 246, 1)",
            "borderTopColor": "rgba(243, 244, 246, 1)",
            "flexDirection": "row",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Estimated to receive
        </Text>
        <View
          style={
            Object {
              "flexDirection": "column",
              "flexGrow": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "rgba(107, 114, 128, 1)",
                  "marginLeft": 4,
                  "textAlign": "right",
                },
              ]
            }
          >
            1 DFI
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "borderBottomColor": "rgba(243, 244, 246, 1)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(243, 244, 246, 1)",
            "borderRightColor": "rgba(243, 244, 246, 1)",
            "borderTopColor": "rgba(243, 244, 246, 1)",
            "flexDirection": "row",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Minimum to receive
        </Text>
        <View
          style={
            Object {
              "flexDirection": "column",
              "flexGrow": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "rgba(107, 114, 128, 1)",
                  "marginLeft": 4,
                  "textAlign": "right",
                },
              ]
            }
          >
            1 DFI
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
            "borderBottomColor": "rgba(243, 244, 246, 1)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(243, 244, 246, 1)",
            "borderRightColor": "rgba(243, 244, 246, 1)",
            "borderTopColor": "rgba(243, 244, 246, 1)",
            "flexDirection": "row",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Liquidity provider fee
        </Text>
        <View
          style={
            Object {
              "flexDirection": "column",
              "flexGrow": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "rgba(107, 114, 128, 1)",
                  "marginLeft": 4,
                  "textAlign": "right",
                },
              ]
            }
          >
            1 DFI
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#ff00af",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 4,
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
          "color": "#ffffff",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginBottom": 16,
          "marginLeft": 16,
          "marginRight": 16,
          "marginTop": 32,
          "opacity": 1,
          "paddingBottom": 12,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 12,
        }
      }
      testID="button_submit"
    >
      <Text
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontWeight": "700",
            },
          ]
        }
      >
        SWAP
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
